# foresttrav

./: .gitignore  .gitmodules  FAQ.md  README.md
src/collision_mapper/: .clang-tidy  CMakeLists.txt  package.xml
src/collision_mapper/config/: collision_mapper_default.yaml
src/collision_mapper/include/collision_mapper/: SparseCollisionMapper.h  SparseOhmMap.h
src/collision_mapper/launch/: collision_mapper_node.launch
src/collision_mapper/src/: collision_mapper_node.cpp
src/lfe_data_fuser/: CMakeLists.txt  package.xml
src/lfe_data_fuser/config/: default_data_fuser_params.yaml
src/lfe_data_fuser/launch/: data_fuser_node.launch
src/lfe_data_fuser/nodes/: data_fuser_node.py
src/lfe_mapper/lfe_data_fuser/: package.xml
src/lfe_mapper/lfe_data_fuser/nodes/: data_fuser_node.py
src/nve_costmap_converter/: CMakeLists.txt  GroundMapInterface.cpp  GroundMapInterface.h  Ohm2dCostmapGenerator.cpp  Ohm2dCostmapGenerator.h  README.md  costmap_converter_node.cpp  package.xml
src/nve_costmap_converter/config/: costmap_converter_params.yaml
src/nve_costmap_converter/launch/: costmap_generation.launch
src/nve_ia/nve_core/: CMakeLists.txt  package.xml
src/nve_ia/nve_core/src/: ColourFuser.cpp  ColourFuser.h  CsvWriter.cpp  CsvWriter.h  FeatureExtractor.cpp  FeatureExtractor.h  GroundMapInterface.cpp  GroundMapInterface.h  NdtApperanceRayFuser.cpp  NdtApperanceRayFuser.h  OhmVoxelStatistic.cpp  OhmVoxelStatistic.h  RayBuffer.cpp  RayBuffer.h  Types.h  VafUtils.cpp  VafUtils.h  VisabilityAssesser.h
src/nve_ia/nve_robot_labelling/: CMakeLists.txt  README.md  package.xml
src/nve_ia/nve_robot_labelling/config/: default_offline_te_labler_node.yaml
src/nve_ia/nve_robot_labelling/launch/: default_offline_te_labler_node.launch
src/nve_ia/nve_robot_labelling/src/: BinaryTeLabler.cpp  BinaryTeLabler.h  BinaryTeLablerROS.h  GroundLabeler.cpp  GroundLabeler.h  NveLabler.h  OfflineTeLabelingNode.cpp  OfflineVoxelLablerNode.cpp  OfflineVoxelLablerNode.h  ProbTeLabler.cpp  ProbTeLabler.h  ProbTeLablerROS.h  lfe_utils.cpp  lfe_utils.h  tinycolourmap.h
src/nve_ia/ohm_colour_fuser/: CMakeLists.txt  OhmColourFuserRos.cpp  OhmColourFuserRos.h  ohm_colour_fuser_node.cpp  package.xml
src/nve_ia/ohm_colour_fuser/config/: default_colour_fuser_node.yaml
src/nve_ia/ohm_colour_fuser/launch/: default_colour_fuser_node.launch
src/nve_ia/ohm_offline_colour_fuser/: CMakeLists.txt  OfflineColourFuserRos.cpp  OfflineColourFuserRos.h  README.md  ohm_colour_visualizer_node.cpp  ohm_offline_colour_fuser_node.cpp  package.xml
src/nve_ia/ohm_offline_colour_fuser/config/: default_offline_colour_fuser_node.yaml  flat_spin_colour_fuser.yaml  offline_processing_colour_fuser_node.yaml
src/nve_ia/ohm_offline_colour_fuser/launch/: default_offline_colour_fuser_node.launch  default_rgb_ohm_viewer.launch
src/nve_ia/ohm_ros/: CMakeLists.txt  package.xml
src/nve_ia/ohm_ros/src/: OhmCloudProcessor.cpp  OhmCloudProcessor.h  OhmPointFields.cpp  OhmPointFields.h
src/nve_lfd/lfe_coverage_map/: CMakeLists.txt  package.xml
src/nve_lfd/lfe_coverage_map/launch/: debug_lfe_coverage_map_node.launch
src/nve_lfd/lfe_coverage_map/src/: LfeCoverageMapNode.cpp  lfd_coverage_map_node.cpp
src/nve_lfd/pdag/: CMakeLists.txt  README.md  package.xml
src/nve_lfd/pdag/cfg/: default.yaml
src/nve_lfd/pdag/launch/: default.launch
src/nve_lfd/pdag/src/: estimation_comparer_w_bplot.py  evaluate_differential_enttorpy.py  io_helper.py  pose_cloud_from_hl_scenes.py  pose_cloud_patch_node.py  voxel_compare_utils.py
src/nve_lfd/pdag_cpp/: CMakeLists.txt  package.xml
src/nve_lfd/pdag_cpp/cfg/: default.yaml
src/nve_lfd/pdag_cpp/launch/: pose_cloud_extractor.launch
src/nve_lfd/pdag_cpp/src/: PoseCloudExtractorNode.cpp  PoseCloudExtractorNode.h
src/nve_lfd/rc_trajectory_labeler/: CMakeLists.txt  README.md  package.xml
src/nve_lfd/rc_trajectory_labeler/config/: config_traj_labler_node.yaml
src/nve_lfd/rc_trajectory_labeler/launch/: default_traj_labler.launch
src/nve_lfd/rc_trajectory_labeler/src/: TrajLablerROS.cpp  TrajLablerROS.h  traj_labler_node.cpp
src/nve_tools/: CMakeLists.txt  LICENSE  package.xml
src/nve_tools/include/nve_tools/: ImageTSLoader.h  SemanticDataLoader.h  TrajectoryLoader.h
src/nve_tools/src/: ImageTSLoader.cpp  SemanticDataLoader.cpp  TrajectoryLoader.cpp
src/nve_tools/test/: test_image_ts_loader.cpp  test_trajectory_loader.cpp
src/nve_tools/test/data/: TestTraj.txt  TestTrajLabled.txt  camera0_test.timestamps
src/odap_tm/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/odap_tm/config/: debug_online_learning.yaml  default_config.yaml  default_online_learning.yaml  experiment_odap.yaml
src/odap_tm/script/: evaluate_model.py  train_incr_online_model.py  train_online_model.py
src/odap_tm/tests/: test_data_loader.py  test_io_model_loading.py  test_module_parsing.py  test_online_module.py  test_prob_cost_function.py  test_voxtrav.py
src/ros_scnn_tm/: CMakeLists.txt  README.md  package.xml
src/ros_scnn_tm/config/: default_ros_scnn_node.yaml
src/ros_scnn_tm/launch/: online_trainer_node.launch  ros_scnn_tm_node.launch
src/ros_scnn_tm/msg/: OnlineDataSet.msg  TriggerModelUpdate.msg
src/ros_scnn_tm/src/: scnn_ftm_ros.py  scnn_online_trainer.py
src/scnn_tm/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
src/scnn_tm/config/: default_config.yaml
src/scnn_tm/scripts/: append_features_to_df.py  change_ev_values.py  data_set_histograms.py  data_set_quantification.py  eval_models.py  extract_and_sort_models.py  generate_ul_data_set.py  ohm_scan_alignment.py  ohm_scan_map_comparision.py  ohm_sene_to_map_converter.py  plot_scan_map_compariosn.py  reanme_data_set_features.py  scnn_ftm_ros.py  scnn_pred_scenes.py  test_scan_alignment.py  test_scene_uncertanty_eval.py
src/scnn_tm/tests/: test_ForestGraph.py  test_OnlineDataSetLoader.py  test_data_augmentation.py  test_data_loader.py  test_data_loader_factory.py  test_ohm_cloud_conversion.py  test_online_ForestTrav.py  test_point_cloud_utils.py  test_torch_data_sets.py  visualize_data_set.py
(+137 files in other folders)
