<?xml version="1.0"?>
<package format="2">
  <name>collision_mapper</name>
  <version>0.0.0</version>
  <description>The nve_ia package</description>
  <maintainer email="rue011@csiro.au">rue011</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nve_robot_labelling</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libglm-dev</depend>
  <depend>ohm</depend>

</package>
