<?xml version="1.0"?>
<package format="2">
  <name>nve_costmap_converter</name>
  <version>0.0.0</version>
  <description>The nve_costmap_convertere</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rue011@csiro.au">rue011</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ohm</depend>
  <depend>tf2_ros</depend>
  <depend>perception_pcl</depend>
  <depend>pcl_conversions</depend>

</package>
