<?xml version="1.0"?>
<package format="2">
  <name>nve_tools</name>
  <version>0.0.0</version>
  <description>Tools used in for the ForestTrav pkg</description>
  <maintainer email="fabio.ruetz@gmail.com">rue011</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libglm-dev</depend>


</package>
