<?xml version="1.0"?>
<package format="2">
  <name>lfe_coverage_map</name>
  <version>0.0.0</version>
  <description>The lve_coverage_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rue011@csiro.au">rue011</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>costmap_2d</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

</package>
