<?xml version="1.0"?>
<package format="2">
  <name>pdag</name>
  <version>0.0.0</version>
  <description>TODO:Pose based data generation package</description>
  <maintainer email="fabio.ruetz@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>ros_numpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-pandas</depend>
  <depend>python3-sklearn</depend>
  <depend>python3-sklearn-intelex</depend>
  <depend>python3-opencv</depend>
  <depend>tf2_sensor_msgs</depend>

</package>
