<?xml version="1.0"?>
<package format="2">
  <name>rc_trajectory_labeler</name>
  <version>0.0.0</version>
  <description>The ftm_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rue011@csiro.au">rue011</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nve_tools</depend>

</package>
